# text-to-morse-led

./: CMakeLists.txt  README.md
led-daemon/: CMakeLists.txt  led.cpp  led.h  main.cpp  su.powar.LedDaemon.conf  su.powar.LedDaemon.xml
text2morseled/: CMakeLists.txt  main.cpp  morsetransmitter.cpp  morsetransmitter.h
